Criado tela de detalhes do cursilhista

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="cursilhistas">Cursilhistas</a>
+                    <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
                 </li>
             </ul>
             </div>
