--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
     <title>MCC JOVEM IVINHEMA</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">MCCJ Ivinhema</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Início</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
-                </li>
-            </ul>
+    <div class="d-flex flex-column">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">MCCJ Ivinhema</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
+                    </li>
+                </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
     
+        <p class="fw-bold align-self-center justify-self-center" style="margin-top: 15%; font-size: 20px; text-align: center;">Movimento de Cursilho de Cristandade Jovem de Ivinhema</p>
+        <a type="button" class="btn btn-success align-self-center fw-bold" href="/cursilhistas">Cursilhistas</a>
+    </div>
 </body>
 </html>
