alterações espaçamento tabela

--- a/cursilhistas/detalhes/index.html
+++ b/cursilhistas/detalhes/index.html
@@ -58,7 +58,7 @@
               <div class="col-12 card mb-2 text-bg-dark" style="width: 100%;">
                   <p class="fw-bold card-title" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Indicações <i class="bi bi-cursor-fill"></i></p>
                   <div class="collapse multi-collapse" id="multiCollapseExample1">
-                      <div class="card-body" id="indicacoes">
+                      <div class="card-body p-0" id="indicacoes">
                           <table class="table table-dark table-striped">
                               <thead>
                                 <tr>
@@ -74,8 +74,8 @@
               <div class="col-12 card text-bg-light" style="width: 100%;">
                   <p class="fw-bold card-title" data-bs-toggle="collapse" role="button" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Presenças a partir de <span class="text-success">23/03/2025 </span><i class="bi bi-cursor-fill"></i></p>
                   <div class="collapse multi-collapse" id="multiCollapseExample2">
-                      <div class="card-body">
-                          <table class="table table-Light table-striped">
+                      <div class="card-body p-0">
+                          <table class="table table-Light table-striped m-0 p-0">
                               <thead>
                                 <tr>
                                   <th scope="col" id="quantidadePresencas"></th>
