mostrar lista de aniversariantes

--- a/cursilhistas/detalhes/index.html
+++ b/cursilhistas/detalhes/index.html
@@ -24,6 +24,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/aniversarios">Aniversários</a>
+              </li>
             </ul>
             </div>
         </div>
