--- a/cursilhistas/index.html
+++ b/cursilhistas/index.html
@@ -20,10 +20,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Início</a>
+                        <a class="nav-link active" aria-current="page" href="/">Início</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
+                        <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/aniversarios">Aniversários</a>
                     </li>
                 </ul>
                 </div>
