Estilizado página de anviersariantes

--- a/aniversarios/index.html
+++ b/aniversarios/index.html
@@ -38,7 +38,7 @@
             <thead>
               <tr>
                 <th scope="col">Nome</th>
-                <th scope="col">Data Aniversário</th>
+                <th scope="col">Data</th>
                 <th scope="col">Dias</th>
               </tr>
             </thead>
