--- a/aniversarios/index.html
+++ b/aniversarios/index.html
@@ -32,7 +32,7 @@
         </div>
     </nav>
         <div class="px-1 mt-2">
-            <span class="fw-bold" id="tituloProximosAniversarios">Pŕoximos Aniversários</span>
+            <span class="fw-bold" id="tituloProximosAniversarios">Próximos Aniversários</span>
         </div>
         <table class="table table-light table-striped mt-1">
             <thead>
