--- a/aniversarios/index.html
+++ b/aniversarios/index.html
@@ -13,37 +13,56 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">MCCJ Ivinhema</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Início</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/aniversarios">Aniversários</a>
-                </li>
-            </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/aniversarios">Aniversários</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
-        <div class="px-1 mt-2">
-            <span class="fw-bold" id="tituloProximosAniversarios">Próximos Aniversários</span>
-        </div>
-        <table class="table table-light table-striped mt-1">
-            <thead>
-              <tr>
-                <th scope="col">Nome</th>
-                <th scope="col">Data</th>
-                <th scope="col">Dias</th>
-              </tr>
-            </thead>
-            <tbody id="listaAniversarios">
-            </tbody>
-        </table>
+    <div class="px-1 mt-2">
+        <span class="fw-bold" id="tituloProximosAniversarios">Próximos Aniversários</span>
+    </div>
+    <table class="table table-light table-striped mt-1">
+        <thead>
+            <tr>
+            <th scope="col">Nome</th>
+            <th scope="col">Data</th>
+            <th scope="col">Dias</th>
+            </tr>
+        </thead>
+        <tbody id="listaAniversarios">
+        </tbody>
+    </table>
+    <div class="fixed-bottom d-lg-none d-xl-none d-xl-block">
+        <ul class="nav nav-tabs nav-fill" data-bs-theme="dark" id="myTab" role="tablist">
+            <li class="nav-item bg-light" role="presentation">
+                <a class="nav-link d-flex flex-column align-items-center" href="/">
+                <i class="bi bi-house-fill"></i>
+                <span>Início</span>
+                </a>
+            </li>
+            <li class="nav-item bg-light" role="presentation">
+                <a class="nav-link d-flex flex-column align-items-center" href="/cursilhistas">
+                <i class="bi bi-card-list"></i>
+                <span>Cursilhistas</span>
+                </a>
+            </li>
+            <li class="nav-item bg-light" role="presentation">
+                <a class="nav-link active d-flex flex-column align-items-center" href="/aniversarios">
+                <i class="bi bi-calendar"></i>
+                <span>Aniversários</span>
+                </a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
