--- a/cursilhistas/detalhes/index.html
+++ b/cursilhistas/detalhes/index.html
@@ -13,21 +13,18 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">MCCJ Ivinhema</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Início</a>
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="/">Início</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/aniversarios">Aniversários</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/aniversarios">Aniversários</a>
-              </li>
-            </ul>
+              </ul>
             </div>
         </div>
     </nav>
@@ -56,7 +53,7 @@
           </div>
       </div>
 
-      <div id="">
+      <div class="mb-3 pb-5">
           <div class="row p-4">
               <div class="col-12 card mb-2 text-bg-dark" style="width: 100%;">
                   <p class="fw-bold card-title" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Indicações <i class="bi bi-cursor-fill"></i></p>
@@ -91,6 +88,29 @@
                   </div>
               </div>
           </div>
+      </div>
+
+      <div class="fixed-bottom d-lg-none d-xl-none d-xl-block">
+        <ul class="nav nav-tabs nav-fill" data-bs-theme="dark" id="myTab" role="tablist">
+            <li class="nav-item bg-light" role="presentation">
+              <a class="nav-link d-flex flex-column align-items-center" href="/">
+                <i class="bi bi-house-fill"></i>
+                <span>Início</span>
+              </a>
+            </li>
+            <li class="nav-item bg-light" role="presentation">
+              <a class="nav-link active d-flex flex-column align-items-center" href="/cursilhistas">
+                <i class="bi bi-card-list"></i>
+                <span>Cursilhistas</span>
+              </a>
+            </li>
+            <li class="nav-item bg-light" role="presentation">
+              <a class="nav-link d-flex flex-column align-items-center" href="/aniversarios">
+                <i class="bi bi-calendar"></i>
+                <span>Aniversários</span>
+              </a>
+            </li>
+        </ul>
       </div>
     </div>
 </body>
