--- a/cursilhistas/index.html
+++ b/cursilhistas/index.html
@@ -10,31 +10,51 @@
     <title>MCC JOVEM IVINHEMA</title>
 </head>
 <body>
-    <div>
+    <div class="d-flex flex-column">
         <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">MCCJ Ivinhema</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/aniversarios">Aniversários</a>
-                    </li>
-                </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/aniversarios">Aniversários</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
 
-        <ul class="list-group" id="lista-cursilhistas">
+        <ul class="list-group mb-3 pb-5" id="lista-cursilhistas">
         </ul>
+
+        <div class="fixed-bottom d-lg-none d-xl-none d-xl-block">
+            <ul class="nav nav-tabs nav-fill" data-bs-theme="dark" id="myTab" role="tablist">
+                <li class="nav-item bg-light" role="presentation">
+                  <a class="nav-link d-flex flex-column align-items-center" href="/">
+                    <i class="bi bi-house-fill"></i>
+                    <span>Início</span>
+                  </a>
+                </li>
+                <li class="nav-item bg-light" role="presentation">
+                  <a class="nav-link active d-flex flex-column align-items-center" href="/cursilhistas">
+                    <i class="bi bi-card-list"></i>
+                    <span>Cursilhistas</span>
+                  </a>
+                </li>
+                <li class="nav-item bg-light" role="presentation">
+                  <a class="nav-link d-flex flex-column align-items-center" href="/aniversarios">
+                    <i class="bi bi-calendar"></i>
+                    <span>Aniversários</span>
+                  </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
