--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <title>MCC JOVEM IVINHEMA</title>
 </head>
@@ -12,27 +13,49 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">MCCJ Ivinhema</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/aniversarios">Aniversários</a>
-                    </li>
-                </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/aniversarios">Aniversários</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
+
+        <div class="d-flex flex-column align-items-center py-5 mt-5">
+            <p class="fw-bold" style="font-size: 20px; text-align: center;">Movimento de Cursilho de Cristandade Jovem de Ivinhema</p>
+            <a type="button" class="btn btn-success fw-bold px-5 py-2" href="/cursilhistas">Cursilhistas</a>
+        </div>
     
-        <p class="fw-bold align-self-center justify-self-center" style="margin-top: 15%; font-size: 20px; text-align: center;">Movimento de Cursilho de Cristandade Jovem de Ivinhema</p>
-        <a type="button" class="btn btn-success align-self-center fw-bold" href="/cursilhistas">Cursilhistas</a>
+        <div class="fixed-bottom d-lg-none d-xl-none d-xl-block">
+            <ul class="nav nav-tabs nav-fill" data-bs-theme="dark" id="myTab" role="tablist">
+                <li class="nav-item bg-light" role="presentation">
+                  <a class="nav-link active d-flex flex-column align-items-center" href="/">
+                    <i class="bi bi-house-fill"></i>
+                    <span>Início</span>
+                  </a>
+                </li>
+                <li class="nav-item bg-light" role="presentation">
+                  <a class="nav-link d-flex flex-column align-items-center" href="/cursilhistas">
+                    <i class="bi bi-card-list"></i>
+                    <span>Cursilhistas</span>
+                  </a>
+                </li>
+                <li class="nav-item bg-light" role="presentation">
+                  <a class="nav-link d-flex flex-column align-items-center" href="/aniversarios">
+                    <i class="bi bi-calendar"></i>
+                    <span>Aniversários</span>
+                  </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
