Estilização no componente de rodapé

--- a/cursilhistas/index.html
+++ b/cursilhistas/index.html
@@ -30,7 +30,7 @@
             </div>
         </nav>
 
-        <ul class="list-group mb-3 pb-5" id="lista-cursilhistas">
+        <ul class="list-group pb-5" id="lista-cursilhistas">
         </ul>
 
         <div class="fixed-bottom d-lg-none d-xl-none d-xl-block">
@@ -38,19 +38,16 @@
                 <li class="nav-item bg-light" role="presentation">
                   <a class="nav-link d-flex flex-column align-items-center" href="/">
                     <i class="bi bi-house-fill"></i>
-                    <span>Início</span>
                   </a>
                 </li>
                 <li class="nav-item bg-light" role="presentation">
                   <a class="nav-link active d-flex flex-column align-items-center" href="/cursilhistas">
                     <i class="bi bi-card-list"></i>
-                    <span>Cursilhistas</span>
                   </a>
                 </li>
                 <li class="nav-item bg-light" role="presentation">
                   <a class="nav-link d-flex flex-column align-items-center" href="/aniversarios">
                     <i class="bi bi-calendar"></i>
-                    <span>Aniversários</span>
                   </a>
                 </li>
             </ul>
