--- a/cursilhistas/detalhes/index.html
+++ b/cursilhistas/detalhes/index.html
@@ -53,7 +53,7 @@
           </div>
       </div>
 
-      <div class="mb-3 pb-5">
+      <div class="pb-5">
           <div class="row p-4">
               <div class="col-12 card mb-2 text-bg-dark" style="width: 100%;">
                   <p class="fw-bold card-title" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Indicações <i class="bi bi-cursor-fill"></i></p>
@@ -95,19 +95,16 @@
             <li class="nav-item bg-light" role="presentation">
               <a class="nav-link d-flex flex-column align-items-center" href="/">
                 <i class="bi bi-house-fill"></i>
-                <span>Início</span>
               </a>
             </li>
             <li class="nav-item bg-light" role="presentation">
               <a class="nav-link active d-flex flex-column align-items-center" href="/cursilhistas">
                 <i class="bi bi-card-list"></i>
-                <span>Cursilhistas</span>
               </a>
             </li>
             <li class="nav-item bg-light" role="presentation">
               <a class="nav-link d-flex flex-column align-items-center" href="/aniversarios">
                 <i class="bi bi-calendar"></i>
-                <span>Aniversários</span>
               </a>
             </li>
         </ul>
