--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/aniversarios">Aniversários</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/presencas">Presenças</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -50,6 +53,11 @@
                   <a class="nav-link d-flex flex-column align-items-center" href="/aniversarios">
                     <i class="bi bi-calendar"></i>
                   </a>
+                </li>
+                <li class="nav-item bg-light" role="presentation">
+                    <a class="nav-link d-flex flex-column align-items-center" href="/presencas">
+                        <i class="bi bi-bar-chart"></i>
+                    </a>
                 </li>
             </ul>
         </div>
