--- a/presencas/index.html
+++ b/presencas/index.html
@@ -31,18 +31,14 @@
             </div>
         </div>
     </nav>
-    <div class="px-1 mt-2">
-        <span class="fw-bold" id="tituloProximosAniversarios">Próximos Aniversários</span>
-    </div>
-    <table class="table table-light table-striped mt-1">
+    <table class="table table-dark mb-5 pb-5">
         <thead>
             <tr>
-            <th scope="col">Nome</th>
-            <th scope="col">Data</th>
-            <th scope="col">Dias</th>
+                <th scope="col">Cursilhista</th>
+                <th scope="col">Presenças</th>
             </tr>
         </thead>
-        <tbody id="listaAniversarios">
+        <tbody id="listaPresencas">
         </tbody>
     </table>
     <div class="fixed-bottom d-lg-none d-xl-none d-xl-block">
@@ -58,13 +54,13 @@
                 </a>
             </li>
             <li class="nav-item bg-light" role="presentation">
-                <a class="nav-link active d-flex flex-column align-items-center" href="/aniversarios">
+              <a class="nav-link d-flex flex-column align-items-center" href="/aniversarios">
                 <i class="bi bi-calendar"></i>
-                </a>
+              </a>
             </li>
             <li class="nav-item bg-light" role="presentation">
-                <a class="nav-link d-flex flex-column align-items-center" href="/presencas">
-                    <i class="bi bi-bar-chart"></i>
+                <a class="nav-link active d-flex flex-column align-items-center" href="/presencas">
+                    <i class="bi bi-bar-chart-fill"></i>
                 </a>
             </li>
         </ul>
