--- a/aniversarios/index.html
+++ b/aniversarios/index.html
@@ -22,6 +22,9 @@
                         <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/cursilhos">Cursilhos</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/aniversarios">Aniversários</a>
                     </li>
                     <li class="nav-item">
@@ -31,20 +34,22 @@
             </div>
         </div>
     </nav>
-    <div class="px-1 mt-2">
-        <span class="fw-bold" id="tituloProximosAniversarios">Próximos Aniversários</span>
+    <div>
+        <div class="px-1 text-center bg-dark text-light py-3">
+            <span class="fw-bold" id="tituloProximosAniversarios">Próximos Aniversários</span>
+        </div>
+        <table class="table table-light table-striped">
+            <thead class="table-dark" style="border-top: 1px solid white; border-bottom: 2px solid white;">
+                <tr>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Data</th>
+                    <th scope="col">Dias</th>
+                </tr>
+            </thead>
+            <tbody id="listaAniversarios">
+            </tbody>
+        </table>
     </div>
-    <table class="table table-light table-striped mt-1">
-        <thead>
-            <tr>
-            <th scope="col">Nome</th>
-            <th scope="col">Data</th>
-            <th scope="col">Dias</th>
-            </tr>
-        </thead>
-        <tbody id="listaAniversarios">
-        </tbody>
-    </table>
     <div class="fixed-bottom d-lg-none d-xl-none d-xl-block">
         <ul class="nav nav-tabs nav-fill" data-bs-theme="dark" id="myTab" role="tablist">
             <li class="nav-item bg-light" role="presentation">
@@ -55,6 +60,11 @@
             <li class="nav-item bg-light" role="presentation">
                 <a class="nav-link d-flex flex-column align-items-center" href="/cursilhistas">
                 <i class="bi bi-card-list"></i>
+                </a>
+            </li>
+            <li class="nav-item bg-light" role="presentation">
+                <a class="nav-link d-flex flex-column align-items-center" href="/cursilhos">
+                    <i class="bi bi-clock-history"></i>
                 </a>
             </li>
             <li class="nav-item bg-light" role="presentation">
