--- a/cursilhistas/detalhes/index.html
+++ b/cursilhistas/detalhes/index.html
@@ -22,6 +22,9 @@
                       <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
                   </li>
                   <li class="nav-item">
+                      <a class="nav-link" href="/cursilhos">Cursilhos</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="/aniversarios">Aniversários</a>
                 </li>
                 <li class="nav-item">
@@ -104,6 +107,11 @@
               <a class="nav-link active d-flex flex-column align-items-center" href="/cursilhistas">
                 <i class="bi bi-card-list"></i>
               </a>
+            </li>
+            <li class="nav-item bg-light" role="presentation">
+                <a class="nav-link d-flex flex-column align-items-center" href="/cursilhos">
+                    <i class="bi bi-clock-history"></i>
+                </a>
             </li>
             <li class="nav-item bg-light" role="presentation">
               <a class="nav-link d-flex flex-column align-items-center" href="/aniversarios">
