--- a/cursilhos/index.html
+++ b/cursilhos/index.html
@@ -37,13 +37,23 @@
     </nav>
     <div class="bg-dark px-0 pb-5 row m-0">
         <h5 class="text-light text-center pt-3 pb-3 fw-bold">Cursilhos para Jovens da Diocese de Naviraí</h5>
-
-        <div class="modal fade" id="fullscreenModal" tabindex="-1" aria-labelledby="fullscreenModalLabel" aria-hidden="true" style="overflow-x: scroll; width: 2000px !important;">
-            <div class="modal-dialog modal-dialog-centered">
+        
+        <div class="modal fade" id="fullscreenModal" tabindex="-1" aria-labelledby="fullscreenModalLabel" aria-hidden="true" style="overflow-x: scroll;">
+            <div class="modal-dialog modal-dialog-centered modal-xl" id="modal">
                 <div class="modal-content">
                     <div>
-                        <img id="imagem-fullscreen" src="imagens/1 MCC.jpeg" alt="primeiro cursilho jovem diocese naviraí" class="pe-none" width="250%"/>
+                        <img id="imagem-fullscreen" src="imagens/1 MCC.jpeg" alt="primeiro cursilho jovem diocese naviraí" class="pe-none" width="100%"/>
                     </div>
+                </div>
+            </div>
+
+            <div class="imagem-controles">
+                <div>
+                    <i class="bi bi-x imagem-controle-fechar" data-bs-dismiss="modal"></i>
+                </div>
+                <div class="imagem-controles-tamanho">
+                    <i class="bi bi-plus" onclick="aumentarTamanhoImagem()"></i>
+                    <i class="bi bi-dash" onclick="diminuirTamanhoImagem()"></i>
                 </div>
             </div>
         </div>
@@ -169,6 +179,7 @@
             <i class="bi bi-arrows-angle-expand icone-expandir"></i>
         </div>
     </div>
+
     <div class="fixed-bottom d-lg-none d-xl-none d-xl-block">
         <ul class="nav nav-tabs nav-fill" data-bs-theme="dark" id="myTab" role="tablist">
             <li class="nav-item bg-light" role="presentation">
