Atualização presenças com contagem da ata

--- a/presencas/index.html
+++ b/presencas/index.html
@@ -37,6 +37,10 @@
     <table class="table table-dark mb-5 pb-5">
         <thead>
             <tr>
+                <td>Presenças a partir de <b>14/07/2025</b></td>
+                <td></td>
+            </tr>
+            <tr>
                 <th scope="col">Cursilhista</th>
                 <th scope="col">Presenças</th>
             </tr>
