--- a/aniversarios/index.html
+++ b/aniversarios/index.html
@@ -73,6 +73,11 @@
                 </a>
             </li>
             <li class="nav-item bg-light" role="presentation">
+                <a class="nav-link d-flex flex-column align-items-center" href="/data">
+                    <i class="bi bi-calendar-day"></i>
+                </a>
+            </li>
+            <li class="nav-item bg-light" role="presentation">
                 <a class="nav-link d-flex flex-column align-items-center" href="/presencas">
                     <i class="bi bi-bar-chart"></i>
                 </a>
