--- a/presencas/index.html
+++ b/presencas/index.html
@@ -71,6 +71,11 @@
               </a>
             </li>
             <li class="nav-item bg-light" role="presentation">
+                <a class="nav-link d-flex flex-column align-items-center" href="/data">
+                    <i class="bi bi-calendar-day"></i>
+                </a>
+            </li>
+            <li class="nav-item bg-light" role="presentation">
                 <a class="nav-link active d-flex flex-column align-items-center" href="/presencas">
                     <i class="bi bi-bar-chart-fill"></i>
                 </a>
