--- a/aniversarios/index.html
+++ b/aniversarios/index.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Início</a>
+                        <a class="nav-link" aria-current="page" href="/">Início</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
@@ -26,6 +26,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/aniversarios">Aniversários</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/data">Atividades</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/presencas">Presenças</a>
