--- a/cursilhistas/index.html
+++ b/cursilhistas/index.html
@@ -17,10 +17,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Início</a>
+                            <a class="nav-link" aria-current="page" href="/">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
+                            <a class="nav-link active" href="/cursilhistas">Cursilhistas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/cursilhos">Cursilhos</a>
@@ -30,6 +30,9 @@
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="/presencas">Presenças</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/data">Atividades</a>
                         </li>
                     </ul>
                 </div>
