--- a/cursilhos/index.html
+++ b/cursilhos/index.html
@@ -17,16 +17,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Início</a>
+                        <a class="nav-link" aria-current="page" href="/">Início</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/cursilhos">Cursilhos</a>
+                        <a class="nav-link active" href="/cursilhos">Cursilhos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/aniversarios">Aniversários</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/data">Atividades</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/presencas">Presenças</a>
