--- a/data/index.html
+++ b/data/index.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                   <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/">Início</a>
+                      <a class="nav-link" aria-current="page" href="/">Início</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
@@ -32,6 +32,9 @@
                     <a class="nav-link" href="/aniversarios">Aniversários</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link active" href="/data">Atividades</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="/presencas">Presenças</a>
                 </li>
               </ul>
@@ -39,6 +42,22 @@
         </div>
     </nav>
     <div class="mx-1 mt-1 pb-4 mb-4">
+        <button type="button" id="abrirModal" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Mostrar
+        </button>
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              
+              <div class="modal-body">
+                <span class="atividade-titulo"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
         <div id='calendar'></div>
 
         <div class="fixed-bottom d-lg-none d-xl-none d-xl-block">
