--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                             <a class="nav-link" href="/aniversarios">Aniversários</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/data">Atividades</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/presencas">Presenças</a>
                         </li>
                     </ul>
