--- a/cursilhos/index.html
+++ b/cursilhos/index.html
@@ -181,6 +181,12 @@
             <span class="text-light text-center mb-2 fw-lighter" style="font-size: 13px">01 a 04 de Maio de 2025</span>
             <i class="bi bi-arrows-angle-expand icone-expandir"></i>
         </div>
+        <div class="imagens-cursilho col-lg-6 col-md-12 col-sm-12" data-bs-toggle="modal" data-bs-target="#fullscreenModal" onclick="abrirModal(21)">
+            <img src="imagens/21 MCC.jpg" alt="vigesimo primeiro cursilho jovem diocese naviraí" class="img-thumbnail pe-none">
+            <span class="text-light text-center fw-bold mt-1" style="font-size: 14px">21º Cursilho para Jovens da Diocese de Naviraí</span>
+            <span class="text-light text-center mb-2 fw-lighter" style="font-size: 13px">04 a 07 de Setembro de 2025</span>
+            <i class="bi bi-arrows-angle-expand icone-expandir"></i>
+        </div>
     </div>
 
     <div class="fixed-bottom d-lg-none d-xl-none d-xl-block">
