--- a/aniversarios/index.html
+++ b/aniversarios/index.html
@@ -25,10 +25,10 @@
                         <a class="nav-link" href="/cursilhos">Cursilhos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/aniversarios">Aniversários</a>
+                        <a class="nav-link active" href="/aniversarios">Aniversários</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/data">Atividades</a>
+                        <a class="nav-link" href="/data">Atividades</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/presencas">Presenças</a>
