--- a/cursilhistas/detalhes/index.html
+++ b/cursilhistas/detalhes/index.html
@@ -16,10 +16,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                   <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/">Início</a>
+                      <a class="nav-link" aria-current="page" href="/">Início</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="/cursilhistas">Cursilhistas</a>
+                      <a class="nav-link active" href="/cursilhistas">Cursilhistas</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="/cursilhos">Cursilhos</a>
@@ -28,10 +28,10 @@
                     <a class="nav-link" href="/aniversarios">Aniversários</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/presencas">Presenças</a>
+                  <a class="nav-link" href="/data">Atividades</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/data">Atividades</a>
+                  <a class="nav-link" href="/presencas">Presenças</a>
                 </li>
               </ul>
             </div>
