Mostrar pessoas presentes nas atividades

--- a/data/index.html
+++ b/data/index.html
@@ -49,9 +49,15 @@
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-              
+              <div class="modal-header">
+                <div>
+                  <h5 class="modal-title atividade-titulo" id="exampleModalLabel">Cursilhistas Presentes</h5>
+                  <p class="modal-title atividade-data fw-medium pt-1"></p>
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" onclick="limparModal()" aria-label="Close"></button>
+              </div>
               <div class="modal-body">
-                <span class="atividade-titulo"></span>
+                <p class="cursilhistas-presentes"></p>
               </div>
             </div>
           </div>
